Navbar Responsive Design Larger iPhones Overflow Issue Fixing And Padding

--- a/index.css
+++ b/index.css
@@ -1434,8 +1434,8 @@ body {
         position: fixed;
         right: -100%; /* Change from left to right */
         top: 0;
-        height: 100vh;
-        width: 70%; /* Adjust width as needed */
+        height: 65vh;
+        width: 50%; /* Adjust width as needed */
         flex-direction: column;
         background: rgba(0, 0, 0, 0.9);
         text-align: center;
@@ -1450,6 +1450,7 @@ body {
     }
 
     .nav-menu li {
+      padding-right: 2rem;
         margin: 2.5rem 0;
     }
 
